--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <aside>
         <div class="control">
           <label for="number">Size</label>
-          <input type="range" id="number" min="10" max="100" />
+          <input type="range" id="number" min="30" max="100" />
         </div>
         <div class="control">
           <label for="speed">Speed</label>
@@ -33,6 +33,8 @@
         </div>
       </aside>
       <div>
+        <span id="aStar">A*</span>
+        <span id="greedy">Greedy</span>
         <span id="bidirectional">Bidirectional</span>
         <span id="dfs">DFS</span>
         <span id="bfs">BFS</span>
